; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsCurrentTimeInt64.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsCurrentTimeInt64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, {}*, i32 (%struct.TYPE_5__*, double*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3OsCurrentTimeInt64(%struct.TYPE_5__* %0, i64* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca double, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp sge i32 %9, 2
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = bitcast {}** %13 to i32 (%struct.TYPE_5__*, i64*)**
  %15 = load i32 (%struct.TYPE_5__*, i64*)*, i32 (%struct.TYPE_5__*, i64*)** %14, align 8
  %16 = icmp ne i32 (%struct.TYPE_5__*, i64*)* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %11
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 1
  %20 = bitcast {}** %19 to i32 (%struct.TYPE_5__*, i64*)**
  %21 = load i32 (%struct.TYPE_5__*, i64*)*, i32 (%struct.TYPE_5__*, i64*)** %20, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %23 = load i64*, i64** %4, align 8
  %24 = call i32 %21(%struct.TYPE_5__* %22, i64* %23)
  store i32 %24, i32* %5, align 4
  br label %35

25:                                               ; preds = %11, %2
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 2
  %28 = load i32 (%struct.TYPE_5__*, double*)*, i32 (%struct.TYPE_5__*, double*)** %27, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = call i32 %28(%struct.TYPE_5__* %29, double* %6)
  store i32 %30, i32* %5, align 4
  %31 = load double, double* %6, align 8
  %32 = fmul double %31, 8.640000e+07
  %33 = fptosi double %32 to i64
  %34 = load i64*, i64** %4, align 8
  store i64 %33, i64* %34, align 8
  br label %35

35:                                               ; preds = %25, %17
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
